--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,47 +52,18 @@ ul{
 .contact{
 	background: #f9feff;
 }
-
-/*
-.contact form label{
-	display: block;
-}
-.contact form p{
-	margin: 0;
-}
-.contact form .full{
-	grid-column: 1 / 3;
-}
-.contact form button, .contact form input, .contact form textarea{
-	width: 100%;
-	padding: 1em;
-	border: 1px solid rgb(254, 212, 54);
-	font-size: 16px;
-}
-.contact form button{
-	background: rgb(254, 212, 54);
-	border: 0;
-	text-transform: uppercase;
-}
-.contact form button:hover, .contact form button:focus{
-	background: rgb(254, 212, 54);
-	color: white;
-	outline: 0;
-	transition: background-color 0.8s ease-out;
-}
-*/
-.alert{
+#logo-wrapper {
 	text-align: center;
-	font-size: 18px;
-	padding: 10px;
-	color: white;
-	margin-top: 50px
+	margin-bottom: 20px;
+}
+#logo {
+	width: 180px;
 }
 .success{
 	background: #79c879;
 }
-.error{
-	background: red;
+.box-wrapper {
+	margin-top: 25px;
 }
 .box {
 	margin: 10px;
