--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -8,34 +8,40 @@
 <body>
     <% include partials/header %>
     <div class="container">
-        <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
-        <div class="wrapper animated fadeIn">
-            <div class="company-info">
-                <h3>SRSS Prom Sign Up</h3>
-                <ul>
-                    <li><i class="fa fa-road"></i> 17501 W Willard Rd, Poolesville, MD 20837</li>
-                    <li><i class="fa fa-phone"></i> (240) 740-2400</li>
-                    <li><i class="fa fa-envelope"></i> srss.smcs2021@gmail.com</li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h3>Upload Files</h3>
-                <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
-                    <div class="form-group">
-                        <label>Choose the type of file you are uploading:</label>
-                        <div>
-                            <input type="radio" name="collectionName" value="students"> Students
-                            <input class="ml-4" type="radio" name="collectionName" value="obligations"> Obligations
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title">
+                            <h3>Upload Files</h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="contact">
+                                <form ref='uploadForm' id='uploadForm' action='/upload' method='post'
+                                    encType="multipart/form-data">
+                                    <div class="form-group">
+                                        <label>Choose the type of file you are uploading:</label>
+                                        <div>
+                                            <input type="radio" name="collectionName" value="students"> Students
+                                            <input class="ml-4" type="radio" name="collectionName" value="obligations">
+                                            Obligations
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="file" accept=".csv" id="csvFile" name="csvFile">
+                                    </div>
+                                    <div class="form-group text-center">
+                                        <button class="btn btn-lg btn-warning" type="submit" id="submit">Submit</button>
+                                    </div>
+                                </form>
+
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <input type="file" accept=".csv" id="csvFile" name="csvFile">
-                    </div>
-                    <div class="form-group text-center">
-                        <button class="btn btn-lg btn-warning" type="submit" id="submit">Submit</button>
-                    </div>
-                </form>
+                </div>
             </div>
+            <div class="md-col-3"></div>
         </div>
     </div>
 </body>
