--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,16 @@
               </div>
             </a>
           </div>
+          <div class="box">
+              <a href="/help">
+                <div class="icon">
+                  <i class="fa fa-question-circle fa-5x"></i>
+                </div>
+                <div class="icon-text">
+                  Help
+                </div>
+              </a>
+            </div>
         </div>
       </div>
     </div>
