--- a/views/search-student.ejs
+++ b/views/search-student.ejs
@@ -91,7 +91,7 @@
                <div class="card">
                   <div class="card-header">
                      <div class="card-title">
-                        <h5>Search Student</h5>
+                        <h5>Search Student by ID or Last Name</h5>
                      </div>
                      <div class="card-text">
 
