--- a/views/help.ejs
+++ b/views/help.ejs
@@ -152,7 +152,7 @@
 
                                 <div id="export" class="tabcontent">
                                     <h3>Exporting Data</h3>
-                                    <p></p>
+                                    <p>The data will export to a Google Sheets file.</p>
                                     
                                 </div>
                             </div>                      
