style and functionality updates

--- a/views/display-ticket-data.ejs
+++ b/views/display-ticket-data.ejs
@@ -51,7 +51,7 @@
 
 <body>
   <% include partials/header %>
-  <div class="container">
+  <div class="container mt-4 animated fadeIn">
     <div class="card">
       <div class="card-header">
         <div class="card-title">
@@ -83,7 +83,7 @@
           <% }) %>
         </table>
         <div class="form-group">  
-          <button class="text-center" onclick="exportTableToCSV('tickets.csv')">Export HTML Table To CSV File</button>
+          <button class="text-center" onclick="exportTableToCSV('tickets.csv')">Export Data</button>
         </div>
       </div>
     </div>
