--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,9 @@
 
 <body>
   <div class="container  animated fadeIn">
-    <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
+    <div class="title">
+      <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
+    </div>
     <div class="wrapper">
       <div class="company-info">
         <div id="logo-wrapper">
@@ -62,15 +64,15 @@
             </a>
           </div>
           <div class="box">
-              <a href="/help">
-                <div class="icon">
-                  <i class="fa fa-question-circle fa-5x"></i>
-                </div>
-                <div class="icon-text">
-                  Help
-                </div>
-              </a>
-            </div>
+            <a href="/help">
+              <div class="icon">
+                <i class="fa fa-question-circle fa-5x"></i>
+              </div>
+              <div class="icon-text">
+                Help
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
