--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -97,16 +97,16 @@
                            <label>Maximum Capacity: </label>
                            <input class="form-control" type="text" id="maxCap" size="10"></input>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group text-center">
                            <!--<button class="btn btn-primary" id="import" onclick="window.location.href='/upload'">Import
                               files</button>-->
-                           <a class="btn btn-primary" id="import" href="/upload">Import Files</a>
+                           <a class="float-left btn btn-primary" id="import" href="/upload">Import Files</a>
                            <button class="btn btn-warning" id="resetButton">Reset database</button>
-                           <button class="btn btn-warning" id="resetSettings">Reset settings</button>
+                           <button class="float-right btn btn-warning" id="resetSettings">Reset settings</button>
                         </div>
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
-                           <a href="/" class="form-control float-left btn btn-lg btn-secondary" id="backButton">Back </a>
+                           <a href="/" class="float-left btn-lg btn-secondary" id="backButton">Back </a>
                         </div>
                      </div>
                   </div>
