--- a/views/search-student.ejs
+++ b/views/search-student.ejs
@@ -83,7 +83,7 @@
 <body>
    <% include partials/header %>
    <form action="/ticket-entry">
-      <div class="container mt-4">
+      <div class="container mt-4 animated fadeIn">
          <div class="row">
             <div class="col-md-3">
             </div>
