--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -7,14 +7,14 @@
 
 <body>
     <% include partials/header %>
-    <div class="container">
+    <div class="container animated fadeIn mt-4">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
                         <div class="card-title">
-                            <h3>Upload Files</h3>
+                            <h5>Upload</h5>
                         </div>
                         <div class="card-body">
                             <div class="contact">
