--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,21 +4,23 @@
 <head>
 
   <% include partials/head %>
-  
-  <style>
 
+  <style>
     .container {
       margin-top: 100px;
     }
-    
   </style>
 </head>
 
 <body>
   <div class="container  animated fadeIn">
-    <div class="title">
+    <div class="title float-left">
       <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
     </div>
+    <div class="help-icon float-right">
+      <a href="/help"><i class="fa fa-question-circle fa-3x"></i></a>
+    </div>
+    <div class="clearfix"></div>
     <div class="wrapper">
       <div class="company-info">
         <div id="logo-wrapper">
@@ -64,16 +66,6 @@
               </div>
               <div class="icon-text">
                 Settings
-              </div>
-            </a>
-          </div>
-          <div class="box">
-            <a href="/help">
-              <div class="icon">
-                <i class="fa fa-question-circle fa-5x"></i>
-              </div>
-              <div class="icon-text">
-                Help
               </div>
             </a>
           </div>
