--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -94,15 +94,14 @@
                      </div>
                      <div class="card-text">
                         <div class="form-group">
-                           <label>Maximum Capacity: </label>
-                           <input class="form-control" type="text" id="maxCap" size="10"></input>
+                           <label>Maximum Ticket Capacity: </label>
+                           <input class="form-control" type="number" id="maxCap" size="10"></input>
                         </div>
-                        <div class="form-group text-center">
+                        <div class="form-group ">
                            <!--<button class="btn btn-primary" id="import" onclick="window.location.href='/upload'">Import
                               files</button>-->
-                           <a class="float-left btn btn-primary" id="import" href="/upload">Import Files</a>
                            <button class="btn btn-warning" id="resetButton">Reset database</button>
-                           <button class="float-right btn btn-warning" id="resetSettings">Reset settings</button>
+                           <button class=" btn btn-warning" id="resetSettings">Reset settings</button>
                         </div>
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
