--- a/views/help.ejs
+++ b/views/help.ejs
@@ -29,7 +29,6 @@
     }
     .tab {
         float: left;
-        border: 1px solid #ccc;
         background-color: #f1f1f1;
         width: 30%;
         height: 300px;
@@ -62,33 +61,34 @@
     /* Style the tab content */
     .tabcontent {
         float: left;
-        padding: 0px 12px;
-        border: 1px solid #ccc;
+        padding: 20px;
         width: 70%;
         border-left: none;
         height: 300px;
         display: none;
+    }
+    .help-wrapper {
+        min-height: 600px;
     }
 
 </style>
 
 <body>
     <% include partials/header %>
-    <div class="container">
+    <div class="container mt-4 animated fadeIn">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-1">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-10">
                 <div class="card">
                     <div class="card-header">
                         <div class="card-title">
                             <h3>Help</h3>
-                            <a href="/" class="float-right btn btn-lg btn-secondary" id="backButton">Back </a>
                             <!--Make button inline with title-->
                         </div>
                     </div>
-                        <div class="card-body">
-                            <div class="menu">
+                        <div class="card-text help-wrapper">
+                            <div class="menu help-menu">
                                 <div class="tab">
                                     <button class="tablinks" onclick="openTab(event, 'help')">Welcome</button>
                                     <button class="tablinks" onclick="openTab(event, 'upload')">Upload Data</button>
@@ -162,9 +162,10 @@
                             </div>                      
                         </div>
                     <!--</div>-->
+                    <div class="clearfix"></div>
                 </div>
             </div>
-            <div class="md-col-3"></div>
+            <div class="md-col-1"></div>
         </div>
     </div>
 </body>
