--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/settings">Settings</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/help">Help</a>
+          </li>
       </ul>
     </div>
   </nav>
